More PR review changes